# Mirage

./: .dockerignore  .env  .env.example  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  ISSUE_REQUIREMENTS_ANALYSIS.md  LICENSE  MICROSERVICE_ARCHITECTURE_ANALYSIS.md  MICROSERVICE_STATUS_SUMMARY.md  Makefile  README.md  architecture.md  docker-compose.dev.yml  docker-compose.gateway.yml  docker-compose.yml  implementation.md  lib.rs  review_summary.md
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  build-and-push-images.yml  build-and-test.yml  ci.yml  deploy-to-kubernetes.yml  scan-code.yml
common/: Cargo.toml
common/src/: auth.rs  config.rs  database.rs  error.rs  event.rs  health.rs  lib.rs  models.rs  target.rs  utils.rs
config/api-gateway/: config.json
config/auth-service/: config.json
config/configuration-service/: default.yaml
config/discovery-service/: default.yaml
config/integration-service/: default.yaml
config/nginx/: default.conf  nginx.conf
config/scanner-coordinator/: default.yaml
core/src/: event.rs  helpers.rs  lib.rs  mod.rs  target.rs
correlations/src/: lib.rs  mod.rs
docker/: README.md  docker-compose.yml
docker/services/: README.md  api-gateway.dockerfile  auth-service.dockerfile  configuration-service.dockerfile  correlation-engine-service.dockerfile  data-collection-service.dockerfile  data-storage-service.dockerfile  data-storage.dockerfile  discovery-service.dockerfile  integration-service.dockerfile  module-registry-service.dockerfile  notification-service.dockerfile  reporting-service.dockerfile  scan-orchestration-service.dockerfile  scanner-coordinator.dockerfile  user-management-service.dockerfile  visualization-service.dockerfile
docs/: README.md  api-gateway.md  architecture.md  deployment-guide.md  development-guide.md  implementation_design.md  security-guide.md
docs/api-specs/: README.md
docs/architecture/: communication.md  deployment.md  overview.md  services.md
docs/development/: setup.md
kubernetes/: ingress.yaml  mirage-namespace.yaml
libs/mirage-middleware/: Cargo.toml
libs/mirage-middleware/src/: lib.rs
mirage/: README.md
scripts/: advanced-health-check.sh  build-docker-images.sh  deploy-api-gateway.sh  deploy-to-kubernetes.sh  health-check.sh  init-db.sql  init-postgres.sh  setup-docker-structure.sh  start-gateway.sh  test-auth-service.sh
services/api-gateway/: Cargo.toml
services/api-gateway/src/: auth.rs  config.rs  main.rs  middleware.rs  models.rs
services/api-gateway/src/handlers/: auth.rs  proxy.rs
services/auth/: Cargo.toml
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/src/: main.rs  models.rs  routes.rs
services/auth-service/src/middleware/: cors.rs  logging.rs  mod.rs
services/auth/migrations/: V1__initial.sql
services/auth/src/: config.rs  handlers.rs  jwt.rs  main.rs  models.rs  repositories.rs  services.rs
services/auth/src/middleware/: auth.rs
services/configuration-service/: Cargo.toml  go.mod  go.sum
services/configuration-service/cmd/server/: main.go
services/configuration-service/migrations/: 20230901000000_create_config_tables.sql
services/configuration-service/src/: audit.rs  config.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs  validation.rs
services/correlation-engine-service/: Cargo.toml
services/correlation-engine-service/src/: analysis.rs  config.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs
services/data-collection-service/: Cargo.toml
services/data-collection-service/src/: config.rs  execution.rs  handlers.rs  main.rs  models.rs  module.rs  queue.rs  repositories.rs  services.rs  workers.rs
services/data-storage-service/: Cargo.toml
services/data-storage-service/src/: config.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs
services/discovery-service/: Cargo.toml
services/discovery-service/cmd/server/: main.go
services/discovery-service/src/: config.rs  error.rs  handlers.rs  health.rs  main.rs  models.rs  repository.rs  services.rs
services/integration-service/: Cargo.toml  requirements.txt
services/integration-service/app/: main.py
services/integration-service/migrations/: 20230901000000_create_integration_tables.sql
services/integration-service/src/: config.rs  crypto.rs  error.rs  handlers.rs  main.rs  models.rs  providers.rs  repositories.rs  scheduler.rs  services.rs
services/module-registry-service/: Cargo.toml
services/module-registry-service/src/: config.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs
services/notification/: Cargo.toml
services/notification-service/: Cargo.toml
services/notification-service/src/: config.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs  templates.rs
services/notification-service/src/channels/: database.rs  email.rs  mod.rs  slack.rs  webhook.rs
services/notification-service/templates/: new_entity_email.hbs
services/notification/src/channels/: database.rs  slack.rs
services/reporting-service/: Cargo.toml
services/reporting-service/src/: config.rs  handlers.rs  main.rs  models.rs  services.rs  templates.rs
services/reporting-service/src/formatters/: csv.rs  excel.rs  html.rs  json.rs  markdown.rs  mod.rs  pdf.rs
services/scan-orchestration-service/: Cargo.toml
services/scan-orchestration-service/src/: config.rs  execution.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs
services/scanner-coordinator/: Cargo.toml
services/scanner-coordinator/migrations/: 20230901000000_create_scanner_tables.sql
services/scanner-coordinator/src/: config.rs  error.rs  handlers.rs  integrations.rs  main.rs  models.rs  repositories.rs  scheduler.rs  services.rs
services/user-management-service/: Cargo.toml
services/user-management-service/src/: config.rs  handlers.rs  main.rs  repositories.rs  services.rs
services/visualization-service/: Cargo.toml
services/visualization-service/src/: error.rs  handlers.rs  main.rs  models.rs  services.rs
services/visualization-service/src/renderers/: graph.rs  mod.rs
(+127 files in other folders)
