[package]
name = "mirage"
version = "0.1.0"
edition = "2021"
description = "A next-generation OSINT platform based on SpiderFoot"
authors = ["Mirage Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.9"
lazy_static = "1.4"
url = "2.4"
chrono = "0.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.11"

[workspace]
members = [
    "common",
    "services/auth",
    "services/user-management",
    "services/module-registry",
    "services/scan-orchestration", 
    "services/data-collection",
    "services/data-storage",
    "services/correlation-engine",
    "services/visualization",
    "services/reporting",
    "services/notification"
]

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
