[package]
name = "mirage"
version = "0.1.0"
edition = "2021"
description = "A next-generation OSINT platform based on SpiderFoot"
authors = ["Agostino Panico @poppopjmp"]

# Use workspace dependencies where possible
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = "1.9"
lazy_static = "1.4"
url = "2.4"
chrono = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
env_logger = "0.10"
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.11"

[workspace]
members = [
    "common",
    "services/api-gateway",
    "services/auth-service",
    "services/configuration-service",
    "services/correlation-engine-service",
    "services/data-collection-service",
    "services/data-storage-service",
    "services/discovery-service",
    "services/integration-service",
    "services/module-registry-service",
    "services/notification-service",
    "services/reporting-service",
    "services/scan-orchestration-service",
    "services/scanner-coordinator",
    "services/user-management-service",
    "services/visualization-service",
    "services/web-ui"
]

# This workspace root doesn't have any source code
[lib]
name = "mirage_workspace"
path = "lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
# Core dependencies with fixed versions for all workspace members
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Database related dependencies
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Web framework dependencies
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
hyper = "0.14"

# Security related dependencies
jsonwebtoken = "8.3"
bcrypt = "0.14"
rand = "0.8"

# Common utility dependencies
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
futures = "0.3"
once_cell = "1.18"
