[package]
name = "mirage-middleware"
version = "0.1.0"

description = "Common middleware for Mirage microservices"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
log = "0.4.17"
futures = "0.3.28"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
