[package]
name = "mirage-api-gateway"
version = "0.1.0"
edition = "2021"
description = "API gateway service for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# reqwest = { version = "0.11", features = ["json"] }
# futures = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
