[package]
name = "mirage-api-gateway"
version = "0.1.0"
edition = "2021"
description = "API gateway service for Mirage OSINT platform"
authors = ["Mirage Team"]

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
actix-cors = "0.6"
actix-rt = "2.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.13" }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures = "0.3"
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "8.3"
dotenv = "0.15"
lazy_static = "1.4"
rand = "0.9"
