[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
authors = ["Mirage Team"]
description = "Authentication service for the Mirage platform"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.6.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.3", features = ["v4", "serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"

[dev-dependencies]
mockall = "0.11"
test-case = "3.1"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
