[package]
name = "mirage-data-collection"
version = "0.1.0"
edition = "2021"
description = "Data collection service for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mongodb = "2.6"
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "socks", "rustls-tls"] }
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
url = "2.4"
thiserror = "1.0"
