[package]
name = "mirage-data-storage"
version = "0.1.0"
edition = "2021"

description = "Data storage service for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
mongodb = "2.6"
elasticsearch = "9.0.0-alpha.1"
futures = "0.3"
