[package]
name = "mirage-discovery-service"
version = "0.1.0"
edition = "2021"
description = "Service discovery and registration for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
redis = { version = "0.22", features = ["tokio-comp"] }
futures = "0.3"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
