[package]
name = "discovery-service"
version = "0.1.0"
edition = "2021"
description = "Service discovery and registration for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
config = "0.13"
redis = { version = "0.22", features = ["tokio-comp"] }
futures = "0.3"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
axum = "0.6.10"
