[package]
name = "mirage-integration-service"
version = "0.1.0"
edition = "2021"
description = "External integration service for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
thiserror = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-trait = "0.1"
url = "2.3"
oauth2 = "4.4"
base64 = "0.21"
aes-gcm = "0.10"
openssl = "0.10"
cron = "0.12"
redis = { version = "0.22", features = ["tokio-comp"] }
jsonschema = "0.17"
oauth1 = "0.8"
