[package]
name = "integration-service"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
axum = "0.6.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
reqwest = { version = "0.11.14", features = ["json"] }
