[package]
name = "mirage-notification"
version = "0.1.0"
edition = "2021"
description = "Notification service for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
lettre = "0.10"
handlebars = "4.3"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
