[package]
name = "mirage-reporting"
version = "0.1.0"
edition = "2021"
description = "Reporting service for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
actix-files = "0.6"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
handlebars = "4.3"
plotters = "0.3"
weasyprint = "0.2"
csv = "1.2"
xlsxwriter = { version = "0.6", features = ["serde"] }
sanitize-filename = "0.4"
mime_guess = "2.0"
