[package]
name = "mirage-reporting"
version = "0.1.0"
edition = "2021"
description = "Reporting service for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
actix-files = "0.6"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
handlebars = "4.3"
plotters = "0.3"
wkhtmltopdf = "0.4"  # Replacing weasyprint which doesn't exist on crates.io
csv = "1.2"
xlsxwriter = "0.6"
sanitize-filename = "0.4"
mime_guess = "2.0"
