[package]
name = "mirage-scan-orchestration"
version = "0.1.0"
edition = "2021"
description = "Scan orchestration service for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
tokio = { workspace = true }
actix-web = "4.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
futures = "0.3"
