[package]
name = "mirage-visualization"
version = "0.1.0"

description = "Visualization service for Mirage OSINT platform"

[dependencies]
mirage-common = { path = "../../common" }
actix-web = "4.3"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
plotters = "0.3"
svg = "0.13"
handlebars = "4.3"
