[package]
name = "mirage-visualization"
version = "0.1.0"
edition = "2021"
authors = ["Mirage Team"]
license = "MIT"
description = "Visualization service for Mirage OSINT platform"

[dependencies]
# Change the path to use workspace relative path
mirage-common = { path = "../../common" }
actix-web = "4.3"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
config = { version = "0.13" }
uuid = { version = "1.3", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
plotters = "0.3"
svg = "0.13"
handlebars = "4.3"
